--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     }
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.ts"]
+  "include": ["src", "./*.d.ts", "./*.config.ts", "public/icons/*.tsx"]
 }
