pkg: fix build scripts

--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "dev": "vite --mode ssr",
     "dev:debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "build": "qwik build",
-    "build:client": "vite build",
-    "build:preview": "vite build --ssr src/entry.preview.tsx",
-    "build:types": "tsc --incremental --noEmit",
+    "build.client": "vite build",
+    "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "test:unit": "bun test ./tests/*.test.ts",
     "test:unit:watch": "bun test --watch ./tests/*.test.ts",
