pkg: apply bp for eslint script

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "biome:unsafe": "biome check --fix --unsafe .",
     "prettier:fix": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "eslint": "eslint \"src/**/*.ts*\"",
+    "eslint": "eslint --config .eslintrc.cjs --report-unused-disable-directives --max-warnings 0 .",
     "backup": "grunt backup",
     "pkg-check": "depcheck",
     "pkg-upgrade": "ncu --interactive --format group --packageManager bun",
