pkg: install autoprefixer + ts-reset | apply bp for prettier script

--- a/package.json
+++ b/package.json
@@ -55,9 +55,8 @@
     "biome:stop": "biome stop",
     "biome:fix": "biome check --fix .",
     "biome:unsafe": "biome check --fix --unsafe .",
-    "prettier:fix": "prettier --write .",
-    "prettier:check": "prettier --check .",
     "eslint": "eslint --config .eslintrc.cjs --report-unused-disable-directives --max-warnings 0 .",
+    "prettier": "prettier --config .prettierrc --write .",
     "backups": "grunt backups",
     "pkg-check": "depcheck",
     "pkg-upgrade": "ncu --interactive --format group --packageManager bun",
@@ -73,12 +72,14 @@
     "@builder.io/qwik": "^1.8.0",
     "@builder.io/qwik-city": "^1.8.0",
     "@playwright/test": "^1.46.1",
+    "@total-typescript/ts-reset": "^0.6.0",
     "@types/bun": "^1.1.8",
     "@types/eslint": "8.56.10",
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.11",
     "@typescript-eslint/eslint-plugin": "7.16.1",
     "@typescript-eslint/parser": "7.16.1",
+    "autoprefixer": "^10.4.20",
     "depcheck": "^1.4.7",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "^1.8.0",
