tsc: valid all config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,46 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "target": "ES2017",
-    "module": "ES2022",
-    "lib": ["es2022", "DOM", "WebWorker", "DOM.Iterable"],
+    "target": "ESNext",
+		"module": "ESNext",
+    "lib": ["ESNext", "DOM", "WebWorker", "DOM.Iterable"],
     "jsx": "react-jsx",
     "jsxImportSource": "@builder.io/qwik",
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
+    "verbatimModuleSyntax": false,
     "moduleResolution": "Bundler",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "moduleDetection": "force",
+    "rootDir": ".",
+    "outDir": "./dist",
+    "useDefineForClassFields": true,
+		"allowImportingTsExtensions": true,
+		"allowSyntheticDefaultImports": true,
+    "importHelpers": true,
+		"alwaysStrict": true,
+		"sourceMap": true,
+		"noEmit": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noPropertyAccessFromIndexSignature": false,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitAny": true,
+		"noImplicitThis": false,
+    "strictNullChecks": true,
+		"esModuleInterop": true,
+		"allowJs": true,
+		"strict": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
     "incremental": true,
-    "isolatedModules": true,
-    "outDir": "tmp",
-    "noEmit": true,
-    "paths": {
-      "~/*": ["./src/*"]
-    }
+		"paths": {
+			"@/*": ["./src/*"],
+			"~/*": ["./public/*"]
+		}
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.ts", "public/icons/*.tsx"]
+  "include": ["src", "e2e", "tests", "scripts", "public/icons", "./*.d.ts", "./*.config.ts"],
+  "exclude": ["./node_modules"],
 }
