--- a/package.json
+++ b/package.json
@@ -1,101 +1,99 @@
 {
-  "name": "qwik-boilerplate",
-  "version": "1.0.0",
-  "description": "Minimalistic boilerplate to start Qwik development in TypeScript, optimized for blazing-fast performance with Bun & Vite 🚀",
-  "author": "Raja Rakotonirina <raja.rakoto7@gmail.com>",
-  "license": "MIT",
-  "type": "module",
-  "files": ["dist"],
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RajaRakoto/qwik-boilerplate.git"
-  },
-  "homepage": "https://github.com/RajaRakoto/qwik-boilerplate#readme",
-  "bugs": "https://github.com/RajaRakoto/qwik-boilerplate/issues",
-  "trustedDependencies-annotation": "Needed for bun to allow running install scripts",
-  "trustedDependencies": [
-    "sharp"
-  ],
-  "engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime and React 18.2.0 or higher for integration with Qwik",
-  "engines": {
-    "node": "^18.17.0 || ^20.3.0 || >=21.0.0",
-    "react": ">=18.2.0"
-  },
-  "keywords": [
-    "typescript",
-    "qwikjs",
-    "qwik",
-    "qwik-city",
-    "vitejs",
-    "vite",
-    "bunjs",
-    "bun",
-    "minimalist",
-    "boilerplate",
-    "template",
-    "starter"
-  ],
-  "scripts": {
-    "qwik": "qwik",
-    "start": "vite --open --mode ssr",
-    "preview": "qwik build preview && vite preview --open",
-    "clean": "rimraf build dist coverage playwright-report",
-    "dev": "vite --mode ssr",
-    "dev:debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "build": "qwik build",
-    "build.client": "vite build",
-    "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
-    "test:unit": "bun test ./tests/*.test.ts",
-    "test:unit:watch": "bun test --watch ./tests/*.test.ts",
-    "test:e2e": "rimraf playwright-report && playwright test ./e2e/*.spec.ts",
-    "biome:start": "biome start",
-    "biome:stop": "biome stop",
-    "biome:fix": "biome check --fix .",
-    "biome:unsafe": "biome check --fix --unsafe .",
-    "eslint": "eslint --config .eslintrc.cjs --report-unused-disable-directives --max-warnings 0 .",
-    "prettier": "prettier --config .prettierrc --write .",
-    "backups": "grunt backups",
-    "pkg-check": "depcheck",
-    "pkg-upgrade": "ncu --interactive --format group --packageManager bun",
-    "versioning": "ungit",
-    "npm-version:major": "npm version major",
-    "npm-version:minor": "npm version minor",
-    "npm-version:patch": "npm version patch",
-    "nvm": "nvm use",
-    "script:sass-charset": "cd scripts && bun sass-charset.js"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@builder.io/qwik": "^1.8.0",
-    "@builder.io/qwik-city": "^1.8.0",
-    "@playwright/test": "^1.46.1",
-    "@total-typescript/ts-reset": "^0.6.0",
-    "@types/bun": "^1.1.8",
-    "@types/eslint": "8.56.10",
-    "@types/jest": "^29.5.12",
-    "@types/node": "20.14.11",
-    "@typescript-eslint/eslint-plugin": "7.16.1",
-    "@typescript-eslint/parser": "7.16.1",
-    "autoprefixer": "^10.4.20",
-    "depcheck": "^1.4.7",
-    "eslint": "8.57.0",
-    "eslint-plugin-qwik": "^1.8.0",
-    "grunt-cli": "^1.5.0",
-    "grunt-contrib-compress": "^2.0.0",
-    "jest": "^29.7.0",
-    "load-grunt-tasks": "^5.1.0",
-    "npm-check-updates": "^17.1.0",
-    "playwright": "^1.46.1",
-    "prettier": "3.3.3",
-    "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
-    "typescript": "5.4.5",
-    "undici": "*",
-    "ungit": "^1.5.27",
-    "vite": "5.3.5",
-    "vite-tsconfig-paths": "^4.2.1"
-  }
+	"name": "qwik-boilerplate",
+	"version": "1.0.0",
+	"description": "Minimalistic boilerplate to start Qwik development in TypeScript, optimized for blazing-fast performance with Bun & Vite 🚀",
+	"author": "Raja Rakotonirina <raja.rakoto7@gmail.com>",
+	"license": "MIT",
+	"type": "module",
+	"files": ["dist"],
+	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/RajaRakoto/qwik-boilerplate.git"
+	},
+	"homepage": "https://github.com/RajaRakoto/qwik-boilerplate#readme",
+	"bugs": "https://github.com/RajaRakoto/qwik-boilerplate/issues",
+	"trustedDependencies-annotation": "Needed for bun to allow running install scripts",
+	"trustedDependencies": ["sharp"],
+	"engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime and React 18.2.0 or higher for integration with Qwik",
+	"engines": {
+		"node": "^18.17.0 || ^20.3.0 || >=21.0.0",
+		"react": ">=18.2.0"
+	},
+	"keywords": [
+		"typescript",
+		"qwikjs",
+		"qwik",
+		"qwik-city",
+		"vitejs",
+		"vite",
+		"bunjs",
+		"bun",
+		"minimalist",
+		"boilerplate",
+		"template",
+		"starter"
+	],
+	"scripts": {
+		"qwik": "qwik",
+		"start": "vite --open --mode ssr",
+		"preview": "qwik build preview && vite preview --open",
+		"clean": "rimraf build dist coverage playwright-report",
+		"dev": "vite --mode ssr",
+		"dev:debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+		"build": "qwik build",
+		"build.client": "vite build",
+		"build.preview": "vite build --ssr src/entry.preview.tsx",
+		"build.types": "tsc --incremental --noEmit",
+		"deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+		"test:unit": "bun test ./tests/*.test.ts",
+		"test:unit:watch": "bun test --watch ./tests/*.test.ts",
+		"test:e2e": "rimraf playwright-report && playwright test ./e2e/*.spec.ts",
+		"biome:start": "biome start",
+		"biome:stop": "biome stop",
+		"biome:fix": "biome check --fix .",
+		"biome:unsafe": "biome check --fix --unsafe .",
+		"eslint": "eslint --config .eslintrc.cjs --report-unused-disable-directives --max-warnings 0 .",
+		"prettier": "prettier --config .prettierrc --write .",
+		"backups": "grunt backups",
+		"pkg-check": "depcheck",
+		"pkg-upgrade": "ncu --interactive --format group --packageManager bun",
+		"versioning": "ungit",
+		"npm-version:major": "npm version major",
+		"npm-version:minor": "npm version minor",
+		"npm-version:patch": "npm version patch",
+		"nvm": "nvm use",
+		"script:sass-charset": "cd scripts && bun sass-charset.js"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.8.3",
+		"@builder.io/qwik": "^1.8.0",
+		"@builder.io/qwik-city": "^1.8.0",
+		"@playwright/test": "^1.46.1",
+		"@total-typescript/ts-reset": "^0.6.0",
+		"@types/bun": "^1.1.8",
+		"@types/eslint": "8.56.10",
+		"@types/jest": "^29.5.12",
+		"@types/node": "20.14.11",
+		"@typescript-eslint/eslint-plugin": "7.16.1",
+		"@typescript-eslint/parser": "7.16.1",
+		"autoprefixer": "^10.4.20",
+		"depcheck": "^1.4.7",
+		"eslint": "8.57.0",
+		"eslint-plugin-qwik": "^1.8.0",
+		"grunt-cli": "^1.5.0",
+		"grunt-contrib-compress": "^2.0.0",
+		"jest": "^29.7.0",
+		"load-grunt-tasks": "^5.1.0",
+		"npm-check-updates": "^17.1.0",
+		"playwright": "^1.46.1",
+		"prettier": "3.3.3",
+		"rimraf": "^6.0.1",
+		"ts-jest": "^29.2.5",
+		"typescript": "5.4.5",
+		"undici": "*",
+		"ungit": "^1.5.27",
+		"vite": "5.3.5",
+		"vite-tsconfig-paths": "^4.2.1"
+	}
 }
