--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"playwright": "^1.46.1",
 		"prettier": "3.3.3",
 		"rimraf": "^6.0.1",
+		"sass": "^1.77.8",
 		"ts-jest": "^29.2.5",
 		"typescript": "5.4.5",
 		"undici": "*",
