--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"@builder.io/qwik": "^1.8.0",
 		"@builder.io/qwik-city": "^1.8.0",
 		"@playwright/test": "^1.46.1",
+		"@qwikest/icons": "^0.0.13",
 		"@total-typescript/ts-reset": "^0.6.0",
 		"@types/bun": "^1.1.8",
 		"@types/eslint": "8.56.10",
