prettier: add prettier-plugin-tailwindcss

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,5 +16,6 @@
 	"htmlWhitespaceSensitivity": "css",
 	"endOfLine": "lf",
 	"embeddedLanguageFormatting": "auto",
-	"singleAttributePerLine": false
+	"singleAttributePerLine": false,
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
