--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.3",
+		"@builder.io/partytown": "^0.8.1",
 		"@builder.io/qwik": "^1.8.0",
 		"@builder.io/qwik-city": "^1.8.0",
 		"@playwright/test": "^1.46.1",
