--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"@builder.io/qwik-city": "^1.8.0",
 		"@playwright/test": "^1.46.1",
 		"@qwikest/icons": "^0.0.13",
+		"@raja-rakoto/plum": "^1.1.0",
 		"@total-typescript/ts-reset": "^0.6.0",
 		"@types/bun": "^1.1.8",
 		"@types/eslint": "8.56.10",
