--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
 		"@builder.io/qwik-city": "^1.8.0",
 		"@playwright/test": "^1.46.1",
 		"@qwikest/icons": "^0.0.13",
-		"@raja-rakoto/plum": "^1.1.0",
+		"@raja-rakoto/plum": "^1.1.1",
 		"@total-typescript/ts-reset": "^0.6.0",
 		"@types/bun": "^1.1.8",
 		"@types/eslint": "8.56.10",
@@ -94,7 +94,7 @@
 		"prettier": "3.3.3",
 		"prettier-plugin-tailwindcss": "^0.5.4",
 		"rimraf": "^6.0.1",
-		"sass": "^1.77.8",
+		"sass": "1.77.6",
 		"tailwindcss": "3.3.3",
 		"ts-jest": "^29.2.5",
 		"typescript": "5.4.5",
