--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
 		"isolatedModules": true,
 		"incremental": true,
 		"paths": {
-			"@/*": ["./src/*"],
+			"@/*": ["./src/*"]
 		}
 	},
 	"files": ["./.eslintrc.cjs"],
