--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"@builder.io/partytown": "^0.8.1",
 		"@builder.io/qwik": "^1.8.0",
 		"@builder.io/qwik-city": "^1.8.0",
+		"@fontsource-variable/overpass": "^5.0.20",
 		"@playwright/test": "^1.46.1",
 		"@qwikest/icons": "^0.0.13",
 		"@raja-rakoto/plum": "^1.1.1",
