--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "qwik-boilerplate",
 	"version": "1.0.0",
-	"description": "Minimalistic boilerplate to start Qwik development in TypeScript, optimized for blazing-fast performance with Bun & Vite 🚀",
+	"description": "Minimalistic fullstack boilerplate for developing Qwik + QwikCity applications in TypeScript, optimized for blazing-fast performance using Bun & Vite 🚀",
 	"author": "Raja Rakotonirina <raja.rakoto7@gmail.com>",
 	"license": "MIT",
 	"type": "module",
