--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,5 @@
 	"start_url": ".",
 	"display": "standalone",
 	"background_color": "#fff",
-	"description": "Minimalistic boilerplate to start Qwik development in TypeScript, optimized for blazing-fast performance with Bun & Vite 🚀"
+	"description": "Minimalistic fullstack boilerplate for developing Qwik + QwikCity applications in TypeScript, optimized for blazing-fast performance using Bun & Vite 🚀"
 }
