biome: reorganize ignored files

--- a/biome.json
+++ b/biome.json
@@ -140,36 +140,35 @@
 	],
 	"files": {
 		"ignore": [
-			"**/build",
-			"**/dist",
-			"**/dist-dev",
-			"**/bazel-*",
-			"**/bazel-bin",
-			"**/bazel-out",
-			"**/bazel-qwik",
-			"**/bazel-testlogs",
-			"**/lib",
-			"**/lib-types",
-			"**/etc",
-			"**/external",
-			"**/tsc-out",
-			"**/target",
-			"**/output",
-			"**/server",
-			"**/tsconfig.tsbuildinfo",
-			"**/tsdoc-metadata.json",
-			"**/.pnp",
-			"**/.pnp.js",
-			"**/.yarn",
-			"**/node_modules",
-			"**/bower_components",
-			"**/jspm_packages",
-			"**/vite.config.ts",
-			"**/.rollup.cache",
-			"**/.cache",
-			"**/.netlify",
-			"**/backups",
-			"**/tmp"
+			"build",
+			"dist",
+			"dist-dev",
+			"bazel-*",
+			"bazel-bin",
+			"bazel-out",
+			"bazel-qwik",
+			"bazel-testlogs",
+			"lib",
+			"lib-types",
+			"etc",
+			"external",
+			"tsc-out",
+			"target",
+			"output",
+			"server",
+			"tsconfig.tsbuildinfo",
+			"tsdoc-metadata.json",
+			".pnp",
+			".pnp.js",
+			".yarn",
+			"node_modules",
+			"bower_components",
+			"jspm_packages",
+			".rollup.cache",
+			".cache",
+			".netlify",
+			"backups",
+			"tmp"
 		]
 	}
 }
