--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
 		"autoprefixer": "^10.4.20",
 		"depcheck": "^1.4.7",
 		"eslint": "8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-jest": "^28.8.3",
 		"eslint-plugin-qwik": "^1.8.0",
 		"grunt-cli": "^1.5.0",
 		"grunt-contrib-compress": "^2.0.0",
@@ -93,7 +95,7 @@
 		"prettier": "3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"rimraf": "^6.0.1",
-		"sass": "1.78.0",
+		"sass": "1.77.6",
 		"tailwindcss": "3.4.10",
 		"ts-jest": "^29.2.5",
 		"typescript": "5.5.4",
