--- a/biome.json
+++ b/biome.json
@@ -164,6 +164,7 @@
 			"node_modules",
 			"bower_components",
 			"jspm_packages",
+			"*.local",
 			".rollup.cache",
 			".cache",
 			".netlify",
