--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,16 @@
 		}
 	},
 	"files": ["./.eslintrc.cjs"],
-	"include": ["src", "e2e", "tests", "scripts", "./*.cjs", "./*.js", "./*.ts"],
+	"include": [
+		"src",
+		"e2e",
+		"tests",
+		"scripts",
+		"./*.cjs",
+		"./*.mjs",
+		"./*.mts",
+		"./*.js",
+		"./*.ts"
+	],
 	"exclude": ["./node_modules"]
 }
